# insurance-data-tools

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  scrape.py
examples/: tx_dallas_75007.json
hooks/: install.sh  source-integrity-check.sh
scrapers/: __init__.py  alabama.py  arizona.py  base.py  models.py  texas.py
tasks/: prd-chrome-cost-checker.md  prd-chrome-jargon-decoder.md  prd-chrome-rate-factchecker.md  prd-github-pages-redesign.md
